Closed
Bug 321816
Opened 20 years ago
Closed 20 years ago
[trunk] Triple-clicking does not select the line anymore
Categories
(Core :: DOM: Selection, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: ria.klaassen, Assigned: emaijala+moz)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
975 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Click 3x in the Summary box in order to select the whole line.
2. Result: no selection! :)
This is a regression between 1.9a1_2005122822 and 1.9a1_2005122905.
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2005-12-28+21%3A00%3A00&maxdate=2005-12-29+05%3A00%3A00&cvsroot=%2Fcvsroot
Comment 1•20 years ago
|
||
Basically triple-click is failing everywhere, so not just in the Summary box.
| Assignee | ||
Comment 2•20 years ago
|
||
My bad. I misread one when fixing bug 321794. Sorry roc, another one..
Assignee: selection → emaijala
Status: NEW → ASSIGNED
Attachment #207106 -
Flags: superreview?(roc)
Attachment #207106 -
Flags: review?(roc)
Updated•20 years ago
|
Keywords: regression
Comment 3•20 years ago
|
||
*** Bug 321897 has been marked as a duplicate of this bug. ***
Comment 4•20 years ago
|
||
That's one reason why adding dependencies is useful, in some cases it prevents people from filing duplicate bug reports.
Blocks: 321643
Comment 5•20 years ago
|
||
*** Bug 322037 has been marked as a duplicate of this bug. ***
Attachment #207106 -
Flags: superreview?(roc)
Attachment #207106 -
Flags: superreview+
Attachment #207106 -
Flags: review?(roc)
Attachment #207106 -
Flags: review+
Comment 6•20 years ago
|
||
I just noticed something - I thought I'd mention it in case it wasn't realized by other people and it could help them. A short term workaround to this (aside from clicking and dragging across the entire line of text) is to right-click and then type "a". Without triple-clicking, this seems like a somewhat quick method of selecting an entire line.
Comment 7•20 years ago
|
||
Or clicking regularly and Ctrl-A. Even easier, since you're probably going to do a Ctrl-C after to copy the line anyway. (Sorry for the spam of a second comment.)
| Assignee | ||
Comment 8•20 years ago
|
||
Fix checked in to trunk.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 9•20 years ago
|
||
Verified FIXED using trunk build 2006-01-12-10 of SeaMonkey under Windows XP.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•