Fix for bug 321816: Triple-clicking does not select the line anymore r+sr=roc